--- a/code/config_default.ini
+++ b/code/config_default.ini
@@ -1,9 +1,15 @@
 [pre]
 
 to_gray = True
-rotate = False
-GaussianBlur = True
+rotate = True
+GaussianBlur = False
 equalizer = False
 sharpness_adjuster = False
 ColorJitter = False
 stain_normal = False
+
+[train]
+
+date = 8_7_2
+resume = True
+resume_model_path = D:/Project/Tony/anemia/code/keras_version/models_8_7_2/model_20.pth
